--- a/src/app/colony-chronicles/caught-up-in-your-wheeling-dealing/caught-up-in-your-wheeling-dealing.component.html
+++ b/src/app/colony-chronicles/caught-up-in-your-wheeling-dealing/caught-up-in-your-wheeling-dealing.component.html
@@ -1,7 +1,9 @@
 <div>
     <mat-card>
         <mat-card-title>
-            <h3>Caught Up In Your Wheeling-Dealing</h3>
+            <div class="row">
+                <h3 class="col-md-8 offset-md-2">Caught Up In Your Wheeling-Dealing</h3>
+            </div>
         </mat-card-title>
         <mat-card-subtitle>Published on 7/9/22, written by Frequency. (6417 words, ~28 minute read.)</mat-card-subtitle>
         <mat-card-content style="text-align:left;text-indent: 5%;" class="container">
