--- a/src/app/colony-chronicles/colony-chronicles.component.html
+++ b/src/app/colony-chronicles/colony-chronicles.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <mat-card>
-        <mat-card-title>
-            <h3>Colony Chronicles</h3>
+        <mat-card-title><div class="row">
+            <h3 class="col-md-8 offset-md-2">Colony Chronicles</h3></div>
         </mat-card-title>
         <mat-card-content>
             <div class="row pb-2">
