--- a/src/app/colony-chronicles/thou-have-yet-to-become-me/thou-have-yet-to-become-me.component.html
+++ b/src/app/colony-chronicles/thou-have-yet-to-become-me/thou-have-yet-to-become-me.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <mat-card>
-        <mat-card-title>
-            <h3>Thou Have Yet To Become Me</h3>
+        <mat-card-title><div class="row">
+            <h3 class="col-md-8 offset-md-2">Thou Have Yet To Become Me</h3></div>
         </mat-card-title>
         <mat-card-subtitle>Published on 10/1/22, written by Frequency. (5638 words, ~24 minute read.)</mat-card-subtitle>
         <mat-card-content style="text-align:justify;text-indent: 5%;" class="container">
