--- a/src/app/colony-culture/colony-culture.component.html
+++ b/src/app/colony-culture/colony-culture.component.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
     <mat-card>
         <mat-card-title>
-            <h3>Colony Culture and Society</h3>
+            <div class="row">
+                <h3 class="col-md-8 offset-md-2">Colony Culture and Society</h3>
+            </div>
         </mat-card-title>
         <mat-card-content>
             <hr>
@@ -26,7 +28,9 @@
 <div class="container-fluid">
     <mat-card>
         <mat-card-title>
-            <h3>The Colony Council</h3>
+            <div class="row">
+                <h3 class="col-md-8 offset-md-2">The Colony Council</h3>
+            </div>
         </mat-card-title>
         <mat-card-content>
             <hr>
@@ -66,7 +70,8 @@
 <div class="container-fluid">
     <mat-card>
         <mat-card-title>
-            <h3>Flights</h3>
+            <div class="row">
+                <h3 class="col-md-8 offset-md-2">Flights</h3></div>
         </mat-card-title>
         <mat-card-content>
             <hr>
