--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <mat-card>
-        <mat-card-title>
-            <h3>The Nimbat Colony</h3>
+        <mat-card-title><div class="row">
+            <h3 class="col-md-8 offset-md-2">The Nimbat Colony</h3></div>
         </mat-card-title>
         <mat-card-content>
             <div class="row">
@@ -29,7 +29,7 @@
     <mat-card>
         <mat-card-title>
             <div class="row">
-                <h3>Patreon Supporters</h3>
+                <h3 class="col-md-8 offset-md-2">Patreon Supporters</h3>
             </div>
         </mat-card-title>
         <mat-card-subtitle>
@@ -45,7 +45,6 @@
         <mat-card-content>
             <div class="row">
                 <div class="col-md-8 offset-md-2">
-
                     <div class="row">
                         <div class="col-md-12 align-self-center" style="text-align:center">
                             <h1><u>Devoted</u></h1>
