--- a/src/app/magical-capabilities/magical-capabilities.component.html
+++ b/src/app/magical-capabilities/magical-capabilities.component.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
     <mat-card>
         <mat-card-title>
-            <h3>Magical Capabilities</h3>
+            <div class="row">
+                <h3 class="col-md-8 offset-md-2">Magical Capabilities</h3>
+            </div>
         </mat-card-title>
         <mat-card-content>
             <div class="row">
@@ -41,7 +43,9 @@
     </mat-card>
     <mat-card>
         <mat-card-title>
-            <h3>General Nimbat Magics</h3>
+            <div class="row">
+                <h3 class="col-md-8 offset-md-2">General Nimbat Magics</h3>
+            </div>
         </mat-card-title>
         <mat-card-subtitle>
             <div class="row">
@@ -161,7 +165,9 @@
     </mat-card>
     <mat-card>
         <mat-card-title>
-            <h3>"Flight-Specific" Magic</h3>
+            <div class="row">
+                <h3 class="col-md-8 offset-md-2">"Flight-Specific" Magic</h3>
+            </div>
         </mat-card-title>
         <mat-card-subtitle>
             <div class="row">
@@ -258,22 +264,38 @@
                             Most Flights use various types of runes, which have been observed to produce a variety of
                             effects, on both animate and inanimate objects. This is further detailed below, in another
                             section.</h6>
-                        <h6 style="text-align:justify" class="notes">"In one example of some of the creativity prescribed in runes, one Nimbat described how they had imbued a chest with a rune of their own making, granting it the power to make it burrow itself into the dirt if unwanted paws were to touch it. The question is, would it not be so obvious that an enchantment was present if some sort of estranged marking was on it?”</h6>
+                        <h6 style="text-align:justify" class="notes">"In one example of some of the creativity
+                            prescribed in runes, one Nimbat described how they had imbued a chest with a rune of their
+                            own making, granting it the power to make it burrow itself into the dirt if unwanted paws
+                            were to touch it. The question is, would it not be so obvious that an enchantment was
+                            present if some sort of estranged marking was on it?”</h6>
                     </div>
                     <div class="col">
                         <h4 style="text-align:center;">Transformation</h4>
-                        <h6 style="text-align:justify;">A handful of Nimbats aligned with <a href="proliferation" class="light-link"><b>Flight Proliferation</b></a>
+                        <h6 style="text-align:justify;">A handful of Nimbats aligned with <a href="proliferation"
+                                class="light-link"><b>Flight Proliferation</b></a>
                             offer an
                             optional ritual to Visitants that wish to integrate into the Colony at the highest
                             peak, by
                             altering their body into a fitting design for a Nimbat. </h6>
-                        <h6 style="text-align:justify" class="notes">"Most reported cases have apparently been temporary or tied with conditions. There is a tale or two regarding particularly fiendish sorts turning the unaware into one of their own ken. There have actually been treatments provided for such a thing. However, at the highest level of governing, a more permanent instance can be requested. With a lot of paperwork, of course.”
+                        <h6 style="text-align:justify" class="notes">"Most reported cases have apparently been temporary
+                            or tied with conditions. There is a tale or two regarding particularly fiendish sorts
+                            turning the unaware into one of their own ken. There have actually been treatments provided
+                            for such a thing. However, at the highest level of governing, a more permanent instance can
+                            be requested. With a lot of paperwork, of course.”
                         </h6>
                     </div>
                     <div class="col">
                         <h4 style="text-align:center;">Regeneration</h4>
-                        <h6 style="text-align:justify;">Healing magic. Many Nimbats know how to heal people, but only to a basic degree. The most skilled users are part of <a href="populace" class="light-link"><b>Flight Populace</b></a>, and act as makeshift medics to tend to injured, be it a fully-fledged member of the Colony, or a Visitant. This healing magic involves amplifying the body’s natural healing processes, essentially cutting down the time for injuries to produce healthy tissues.</h6>
-                        <h6 style="text-align:justify" class="notes">"The magic is very potent, usually healing nearly any sort of malady in the span of an afternoon. Members of Proliferation Flight often learn this magic, as they are often working as emergency medical technicians."</h6>
+                        <h6 style="text-align:justify;">Healing magic. Many Nimbats know how to heal people, but only to
+                            a basic degree. The most skilled users are part of <a href="populace"
+                                class="light-link"><b>Flight Populace</b></a>, and act as makeshift medics to tend to
+                            injured, be it a fully-fledged member of the Colony, or a Visitant. This healing magic
+                            involves amplifying the body’s natural healing processes, essentially cutting down the time
+                            for injuries to produce healthy tissues.</h6>
+                        <h6 style="text-align:justify" class="notes">"The magic is very potent, usually healing nearly
+                            any sort of malady in the span of an afternoon. Members of Proliferation Flight often learn
+                            this magic, as they are often working as emergency medical technicians."</h6>
                     </div>
                 </div>
                 <br>
@@ -284,7 +306,8 @@
                 <div class="row">
                     <div class="col">
                         <h4 style="text-align:center;">Illusory Spells</h4>
-                        <h6 style="text-align:justify;">Many Nimbats of <a href="protection" class="light-link"><b>Flight Protection</b></a> are
+                        <h6 style="text-align:justify;">Many Nimbats of <a href="protection"
+                                class="light-link"><b>Flight Protection</b></a> are
                             illusionists, given
                             that they desire to maintain a level of docility to their society. A large network
                             of them
@@ -293,7 +316,12 @@
                             outsiders. Some Nimbats take their illusion-craft further, producing doubles, tricks
                             of
                             light, and false stimuli.</h6>
-                        <h6 style="text-align:justify" class="notes">"This is notably different from Psionic Communication, due to the fact that the affected conscience is still very much in the real world. Interestingly, illusory spells are often treated with a special kind of scrutiny. Not merely for their tendency to be used in pranks, but rather for the lack of actual development. Local pranksters are derided with frustration, often being tied to the more benevolent nature behind Eislyn’s illusory spells.”</h6>
+                        <h6 style="text-align:justify" class="notes">"This is notably different from Psionic
+                            Communication, due to the fact that the affected conscience is still very much in the real
+                            world. Interestingly, illusory spells are often treated with a special kind of scrutiny. Not
+                            merely for their tendency to be used in pranks, but rather for the lack of actual
+                            development. Local pranksters are derided with frustration, often being tied to the more
+                            benevolent nature behind Eislyn’s illusory spells.”</h6>
                     </div>
                 </div>
                 <br>
@@ -302,11 +330,15 @@
     </mat-card>
     <mat-card>
         <mat-card-title>
-            <h3>Runic Enchantment</h3>
+            <div class="row">
+                <h3 class="col-md-8 offset-md-2">Runic Enchantment</h3>
+            </div>
         </mat-card-title>
         <mat-card-subtitle>
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
             Within Runic Enchantment, there is a wide range of possibilities, ranging from bodily alteration to imbuing
-            items with magical properties.
+            items with magical properties.</div></div>
         </mat-card-subtitle>
         <mat-card-content style="text-align:center">
             <div class="container">
@@ -317,15 +349,25 @@
                 <div class="row">
                     <div class="col">
                         <h4 style="text-align:center;">Strength</h4>
-                        <h6 style="text-align:justify;">Specific enchantments grant the user to incorporate increased physical strength. Lifting, pulling, pushing, and other forms of physical exertion are effectively amplified through the magically-augmented strength of the imbued subject.</h6>
-                        <h6 style="text-align:justify" class="notes">“One interesting piece of cultural exchange on the meaning and accessibility of achieving bodily strength happened from a single happenstance moment—I could not hold back laughter as a two-foot tall Nimbat lifted an entire tree over their head and politely asked his mother where to put it.”</h6>
+                        <h6 style="text-align:justify;">Specific enchantments grant the user to incorporate increased
+                            physical strength. Lifting, pulling, pushing, and other forms of physical exertion are
+                            effectively amplified through the magically-augmented strength of the imbued subject.</h6>
+                        <h6 style="text-align:justify" class="notes">“One interesting piece of cultural exchange on the
+                            meaning and accessibility of achieving bodily strength happened from a single happenstance
+                            moment—I could not hold back laughter as a two-foot tall Nimbat lifted an entire tree over
+                            their head and politely asked his mother where to put it.”</h6>
                     </div>
                     <div class="col">
                         <h4 style="text-align:center;">Sensory Improvements</h4>
-                        <h6 style="text-align:justify;">When strength and power aren’t exactly what is most needed, Nimbats are able to bestow improved sensory abilities. For example, improved eyesight, smell, or hearing.</h6>
+                        <h6 style="text-align:justify;">When strength and power aren’t exactly what is most needed,
+                            Nimbats are able to bestow improved sensory abilities. For example, improved eyesight,
+                            smell, or hearing.</h6>
                         <h6 style="text-align:justify" class="notes">.
-                            “If the world beyond the Colony were to find a cure for blindness, what would happen to prescription lenses? Would business run out? Would the cure cost an arm and a leg? Perhaps using the Colony as a simulation for treatments on individuals with eyesight problems could provide some meaningful insight.”
-                            </h6>
+                            “If the world beyond the Colony were to find a cure for blindness, what would happen to
+                            prescription lenses? Would business run out? Would the cure cost an arm and a leg? Perhaps
+                            using the Colony as a simulation for treatments on individuals with eyesight problems could
+                            provide some meaningful insight.”
+                        </h6>
                     </div>
                 </div>
                 <br>
@@ -340,25 +382,34 @@
                             prevent them from dulling or degrading.</h6>
                         <h6 style="text-align:justify" class="notes">
                             “The Colony will surely never understand The Ship of Theseus. They have overreached it.”
-                            </h6>
+                        </h6>
                     </div>
                     <div class="col">
                         <h4 style="text-align:center;">Soulbinding</h4>
                         <h6 style="text-align:justify;">
-                            Some Nimbats, when they wish not to lose a certain item, have it soulbound to them. They, from then on, are able to locate the item without issue, even if it is obscured or in another location.
-                            </h6>
+                            Some Nimbats, when they wish not to lose a certain item, have it soulbound to them. They,
+                            from then on, are able to locate the item without issue, even if it is obscured or in
+                            another location.
+                        </h6>
                         <h6 style="text-align:justify" class="notes">
-                            “‘Become a Nimbat today, and you will never lose your car keys again!’ No, to be frank, I think I would still find a way to lose them even after soulbinding to them.”
-                            </h6>
+                            “‘Become a Nimbat today, and you will never lose your car keys again!’ No, to be frank, I
+                            think I would still find a way to lose them even after soulbinding to them.”
+                        </h6>
                     </div>
                     <div class="col">
                         <h4 style="text-align:center;">Rebounding</h4>
                         <h6 style="text-align:justify;">
-                            An item imbued with this enchantment can be recalled to the bound person at will. For example, if a Nimbat throws a dart, they are able to recall it to their hand after it hits the board. This recalling can either be a “manifestation” in their hand, or it could physically return to them, levitating through the air.
-                            </h6>
+                            An item imbued with this enchantment can be recalled to the bound person at will. For
+                            example, if a Nimbat throws a dart, they are able to recall it to their hand after it hits
+                            the board. This recalling can either be a “manifestation” in their hand, or it could
+                            physically return to them, levitating through the air.
+                        </h6>
                         <h6 style="text-align:justify" class="notes">
-                            “One must imagine the importance and integrity of mental health care and data-logged weaponry under soulbindery. Marshall can be carrying absolutely nothing on her person, but if I so far as look at her funny, I could have three greatswords heading for my neck in a matter of seconds.”
-                            </h6>
+                            “One must imagine the importance and integrity of mental health care and data-logged
+                            weaponry under soulbindery. Marshall can be carrying absolutely nothing on her person, but
+                            if I so far as look at her funny, I could have three greatswords heading for my neck in a
+                            matter of seconds.”
+                        </h6>
                     </div>
                 </div>
                 <br>
@@ -370,9 +421,15 @@
                     <div class="col">
                         <h4 style="text-align:center;">Fertilization</h4>
                         <h6 style="text-align:justify;">
-                            For Flight Preservation, enchanters are able to imbue the land itself with fertility, increasing crop growth and yield.
+                            For Flight Preservation, enchanters are able to imbue the land itself with fertility,
+                            increasing crop growth and yield.
                         </h6>
-                        <h6 style="text-align:justify" class="notes">“It is honestly incredibly interesting to see this magic at work. Priest-like enchanter Nimbats within Flight Preservation make pilgrimages to the farmlands, regularly booning the very soil. They are overseen by Kara, the Agriculture sect leader of Flight Preservation, and she tends to take this obligation incredibly seriously. They report her extensive vetting of enchanter applications, making sure they will attend to the duty as seriously as possible.”</h6>
+                        <h6 style="text-align:justify" class="notes">“It is honestly incredibly interesting to see this
+                            magic at work. Priest-like enchanter Nimbats within Flight Preservation make pilgrimages to
+                            the farmlands, regularly booning the very soil. They are overseen by Kara, the Agriculture
+                            sect leader of Flight Preservation, and she tends to take this obligation incredibly
+                            seriously. They report her extensive vetting of enchanter applications, making sure they
+                            will attend to the duty as seriously as possible.”</h6>
                     </div>
                 </div>
                 <br>
