--- a/src/app/populace/populace.component.html
+++ b/src/app/populace/populace.component.html
@@ -1,25 +1,60 @@
 <div class="container-fluid">
   <mat-card>
     <mat-card-title>
-      <h3>Flight Populace</h3>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">Flight Populace
+        </h3>
+      </div>
+    </mat-card-title>
+    <mat-card-content>
+      <h5>
+        <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px"
+            src="assets/populace.png"></div>
+        <br>
+        <div class="row">
+          <h5 class="col-md-8 offset-md-2">
+            Flight Populace is expressly interested in making sure every Nimbat and Visitant is healthy, happy, and has
+            the things they need to thrive. Taking up the helm on the more political end of things, this Flight
+            prioritizes on ensuring equality for every inhabitant, and to allow them not only to live, but to pursue
+            some level of happiness. In order for this to occur, systems must be put in place to protect rights and
+            opportunities without it coming to cost another’s. Everyone is allowed to live a free life, but regulations
+            are put in place to make sure no one else’s free life can harm another’s. These sects ensure that this
+            remains true.
+          </h5>
+        </div>
+      </h5>
+    </mat-card-content>
+  </mat-card>
+  <br>
+  <mat-card>
+    <mat-card-title>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">The Three Sects of Flight Populace
+        </h3>
+      </div>
     </mat-card-title>
     <mat-card-content>
       <div class="row">
-        <h5>
-          <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px"
-              src="assets/populace.png"></div>
-          <br>
-          <div class="col-md-8 offset-md-2">
-            Flight Populace is expressly interested in making sure every Nimbat and Visitant is healthy, happy, and has
-            the things they need to thrive.
-            Taking up the helm on the more political end of things, this Flight prioritizes on ensuring egality for
-            every
-            inhabitant, and to allow them not only to live, but to pursue some level of happiness. In order for this to
-            occur, systems must be put in place to protect rights and opportunities without it coming to cost another’s.
-            Everyone is allowed to live a free life, but regulations are put in place to make sure no one else’s free
-            life
-            can harm another’s. These sects ensure that this remains true.
-          </div>
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Governance</h4>
+          While laws are primarily made by coordination between Flight Populace and the Colony Council, the Flight
+          itself is not within itself a law-making body. Rather, it is a maintenance body. Policies that protect the
+          rights of Nimbats and Visitants are reviewed every year, and public engagement is utilized to make sure that
+          these policies are functioning properly.
+        </h5>
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Intervention</h4>
+          There are circumstances in which a complication arises for an individual that may prevent them from having
+          access to something. In these cases, this sect directly intervenes to provide reasonable assistance. Depending
+          on the service, some level of compensation may be required, but it usually does not completely intrude on
+          one’s life and style.
+        </h5>
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Adaptation</h4>
+          This particular sect works with Flight Progression to overview new developments for the Colony. These
+          developments could have political changes, and so proposals and coordination with the Council are initiated in
+          order to create necessary policies to accommodate for these kinds of changes, without hurting the political
+          core of the Colony.
         </h5>
       </div>
     </mat-card-content>
@@ -27,116 +62,87 @@
   <br>
   <mat-card>
     <mat-card-title>
-      <h3>The Three Sects of Flight Populace</h3>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">Notable Members</h3>
+      </div>
     </mat-card-title>
     <mat-card-content>
-      <h5>
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <h4 style="text-align:center;">Governance</h4>
-            </div>
-            <div class="col">
-              <h4 style="text-align:center;">Intervention</h4>
-            </div>
-            <div class="col">
-              <h4 style="text-align:center;">Adaptation</h4>
-            </div>
-          </div>
+      <div class="row">
+        <h5 class="notes col-md-6 offset-md-2">
+          <h4>Jena, Flight Populace Elder</h4>
+          "This Elder displays some of the “weakest” magical prowess in the Colony, but that is not to say it is without
+          use. It just lacks apparentness at first meeting. Simply put, Jena is a telepathic empath. She has the ability
+          to read minds to a simple degree, picking up thoughts that permeate through the mind, as well as emotions. The
+          inhabitants say she can figure out an individual in a little under an hour. Jena uses all of this to cater to
+          inhabitants, especially first-time Visitants. She leaves gifts, offers assuring words or advice, seemingly
+          knowing just what to do or say to try and make one smile, or at least feel comfortable. With abilities and a
+          golden heart like that, I find it easy to see why she represents Flight Populace."
+        </h5>
+        <div class="col-md-2">
+          <div style="text-align:center"><img style="width: 40%; height: auto;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/jena.png"></div>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col" style="text-align:justify">
-              While laws are primarily made by coordination between Flight Populace and the Colony Council, the Flight
-              itself is not within itself a law-making body. Rather, it is a maintenance body. Policies that protect the
-              rights of Nimbats and Visitants are reviewed every year, and public engagement is utilized to make sure
-              that these policies are functioning properly.
-            </div>
-            <div class="col" style="text-align:justify">
-              There are circumstances in which a complication arises for an individual that may prevent them from having
-              access to something. In these cases, this sect directly intervenes to provide reasonable assistance.
-              Depending on the service, some level of compensation may be required, but it usually does not completely
-              intrude on one’s life and style.
-            </div>
-            <div class="col" style="text-align:justify">
-              This particular sect works with Flight Progression to overview new developments for the Colony. These
-              developments could have political changes, and so proposals and coordination with the Council are
-              initiated in order to create necessary policies to accommodate for these kinds of changes, without hurting
-              the political core of the Colony.
-            </div>
-          </div>
+        <div class="col-md-8 offset-md-2">
+          <hr>
         </div>
-      </h5>
-    </mat-card-content>
-  </mat-card>
-  <br>
-  <mat-card>
-    <mat-card-title>
-      <h3>Jena, Flight Populace Elder</h3>
-    </mat-card-title>
-    <mat-card-content>
-      <h5 class="notes">
-        "This Elder displays some of the “weakest” magical prowess in the Colony, but that is not to say it is without
-        use. It’s just not evidently apparent, until you put two and two together. Simply put, Jena is an empath, and
-        telepath. She has the ability to read minds to a simple degree, picking up thoughts that permeate through the
-        mind, as well as emotions. The inhabitants say she can figure out an individual in a little under an hour. Jena
-        uses all of this to cater to inhabitants, especially first-time Visitants. She leaves gifts, offers assuring
-        words or advice, seemingly knowing just what to do or say to try and make you smile, or at least feel
-        comfortable. With abilities and a golden heart like that, it’s easy to see why she represents Flight Populace."
-      </h5>
-      <h5>
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <h4 style="text-align:center;">Ela</h4>
-              <h6 style="text-align:center;">Governance Sect Leader</h6>
-            </div>
-            <div class="col">
-              <h4 style="text-align:center;">Rhia</h4>
-              <h6 style="text-align:center;">Intervention Sect Leader</h6>
-            </div>
-            <div class="col">
-              <h4 style="text-align:center;">Jaina</h4>
-              <h6 style="text-align:center;">Adaptation Sect Leader</h6>
-            </div>
-          </div>
+      </div>
+      <div class="row pb-1">
+        <div class="col-md-2 offset-md-2">
+          <div style="text-align:center"><img style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/ela.png"></div>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col notes" style="text-align:justify">
-              "Ela is quite an interesting specimen. I sought her out, and while many Nimbats said she’d likely be in a
-              certain area of the Colony Center, they also indicated that she rarely ever stopped moving. Upon finally
-              locating her, a throng of other Nimbats swarmed about her, all issuing different requests, giving reports,
-              or providing updates. Throughout this, it became clear Ela was successfully participating in upwards of
-              ten conversations at the same time, not missing a beat between any of them. She, herself, was the conduit
-              for a lot of decision making, and to be honest it was quite impressive to see her work. I elected not to
-              approach closer, as to not distract her further."
-            </div>
-            <div class="col notes" style="text-align:justify">
-              "Rhia was not born in the Colony, making her a very rare figure within the population. However, her
-              experience, drive, and talents that have been developed from existing under those circumstances have made
-              her into a stalwart force that truly made her into an embodiment of “Protect the Weak.” Rhia was born with
-              a unique ability to predict disasters in mere minutes before they actually happen. This does not usually
-              give her enough time to stop it, unless it is something extremely quick. What she normally does is begin
-              allocating resources in advance to prepare for what is about to happen, sending warnings in surrounding
-              areas, and contacting whoever she can within the suspected area to warn others and evacuate safely. In her
-              life outside the Colony, she used this to help others avoid freak accidents. Rhia decided that she wanted
-              to continue helping others, since, while she could predict and mitigate disasters, she was disappointed to
-              see how other civilizations would not aid the victims. Upon entering the Colony, she decided she wanted to
-              do things differently."
-            </div>
-            <div class="col notes" style="text-align:justify">
-              "At first, I would often confuse Jaina for a member of Flight Progression, as her job is closely related
-              to the Flight not of her own. She wears a pair of glasses with large lenses, but upon closer inspection
-              and reports from her coworkers, they’re really just for show. Her eyesight is perfectly fine without them,
-              so I suppose she just likes how they look. She’s the link between Progression and Populace, and is tasked
-              primarily with implementing the discoveries of R&D into the Colony’s lifestyle. I got to speak with her
-              directly, and she was very happy to talk about their latest addition, a newly discovered agricultural
-              technique."
-            </div>
-          </div>
+        <h5 class="notes col-md-6">
+          <h4>Ela, Governance Sect Leader
+          </h4>“In hindsight, I might have had an easier time pinning down Ela if I had just set up an appointment
+          through her associates. The thing is, she rarely stops moving from facility to facility. Even in the moments I
+          was able to find her, she was quickly occupied by many inhabitants issuing requests, or reports. When I was
+          finally able to find a speaking opportunity with her, I found myself impressed by her ability to have multiple
+          conversations at once. It could be some kind of personal skill, or most likely a kind of enchantment she is
+          practiced in that gives her an easier means of navigating many at once through speech. If your main task
+          revolves around collective decision-making, a skill like that might save a great deal of time.”
+        </h5>
+        <div class="col-md-8 offset-md-2">
+          <hr>
         </div>
-      </h5>
+      </div>
+      <div class="row">
+        <h5 class="notes col-md-7 offset-md-2">
+          <h4>Rhia, Intervention Sect Leader
+          </h4>
+          “Rhia being born outside of the Colony had excited my prospects at first, since it opened a possibility of
+          learning of other Nimbat settlements around the world. Unfortunately, she was not too keen on sharing any
+          details beyond a silent affirmation that they do exist. As for Rhia herself, she presents an ability to
+          accurately predict incoming disasters, natural or otherwise. With her proactive knowledge, she begins to
+          procure the resources of the Populace Flight to prepare sensitive areas and individuals for what’s to come.
+          These disasters are not always something as grandiose as tornadoes or floods, it can be something as innocuous
+          as a house fire or complications from heavy winds. Her discomfort with discussing her origins had swayed me
+          away from inquiring on just why she might have left her previous home.”
+        </h5>
+        <div class="col-md-1">
+          <div style="text-align:center"><img style="width: 100%; height: auto;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/rhia.png"></div>
+        </div>
+        <div class="col-md-8 offset-md-2">
+          <hr>
+        </div>
+      </div>
+      <div class="row pb-1">
+        <div class="col-md-2 offset-md-2">
+          <div style="text-align:center"><img style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/jaina.png"></div>
+        </div>
+        <h5 class="notes col-md-6">
+          <h4>Jaina, Adaptation Sect Leader
+          </h4>
+          “It only makes sense that it would be the role of the government to determine how foreign technological
+          utilities and methods ought to be incorporated into infrastructure, if they are to be incorporated at all. And
+          the Nimbat that advocates and investigates these kinds of innovations matches my expectations in appearance.
+          Jaina wears a pair of aesthetic lenses, and she’s almost always carrying some kind of primitive electronic
+          device such as a calculator or digital notepad. Our interview took place in her office, which was more akin to
+          a CEO-equivalent in my city. We had many a conversation about the practical applications of objects that wound
+          up on her desk. I worry that she might be easily enticed by cheap “gadgets” that are sold at gas stations.”
+        </h5>
+      </div>
     </mat-card-content>
   </mat-card>
 </div>
