--- a/src/app/preservation/preservation.component.html
+++ b/src/app/preservation/preservation.component.html
@@ -1,73 +1,25 @@
 <div class="container-fluid">
   <mat-card>
-    <div class="row">
-      <div class="col-md-2 offset-md-4">
-        <mat-card-title>
-          <h3 style="text-align:right">Flight Preservation</h3>
-        </mat-card-title>
-        <h6 style="text-align:justify">
-          Flight Preservation deals with the Colony’s impact on the world around them, and the world’s impact on the
-          Colony. They work closely with the other Flights to ensure they all are being mindful with their consumption
-          of
-          resources, and the organization of space. They work especially close with Flight Populace, to ensure they’re
-          able to produce enough for Nimbats to prosper, and for Visitants to live without issues. With this
-          coordination
-          established between both Flights, every inhabitant of the Colony should have their needs to live catered to.
-          Should complications arise, problem-solving is situated to the following sects.</h6>
-      </div>
-      <div class="col-md-6">
-        <h5>
-          <div style="text-align:left"><img style="width: 30%; height: auto;margin-top: 15px;margin-bottom: 15px"
-              src="assets/preservation.png"></div>
-          <br>
-        </h5>
-      </div>
-    </div>
-  </mat-card>
-  <br>
-  <mat-card>
     <mat-card-title>
-      <h3 style="text-align:center">The Three Sects of Flight Preservation</h3>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">Flight Preservation
+        </h3>
+      </div>
     </mat-card-title>
     <mat-card-content>
       <h5>
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <h4 style="text-align:center;">Maintenance</h4>
-            </div>
-            <div class="col">
-              <h4 style="text-align:center;">Forestry</h4>
-            </div>
-            <div class="col">
-              <h4 style="text-align:center;">Scribing</h4>
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col" style="text-align:justify">
-              The Maintenance sect focuses on the primary aspect of keeping Colony resources and infrastructural
-              integrity at tip-top upkeep. Before projects can begin, whether it’s Production requiring use of a
-              resource or the construction of a new building, this sect refers to its acute knowledge of the purposes of
-              roads and building codes as well as the reserves of Colony materials in order to reliably come to
-              collected and informed decision-making.
-            </div>
-            <div class="col" style="text-align:justify">
-              This sect is concerned with the use of resources that exist outside of the Colony, and how the Nimbats
-              affect the land around them. Whether it be logging, hunting, or potential Colony expansion, the Forestry
-              sect is the first to inspect and sign off on any activity that may impact the environment outside of the
-              Colony. They are also tasked with forest fire prevention, mostly by clearing the underbrush and felling
-              trees as needed.
-            </div>
-            <div class="col" style="text-align:justify">
-              The record-keepers and historians in this sect have procured vast knowledge of the Colony’s lengthy span.
-              They do not have events from the outside world well-documented unless it has concerned the Colony in the
-              past. The history of the Colony and its related records are created and curated by Scribing with the
-              intent of preserving the knowledge of past eras for future inhabitants, be they Nimbat or Visitant alike.
-              Artifacts and writing from the past are also kept by Scribing, some of which are on public display.
-            </div>
-          </div>
+        <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px"
+            src="assets/preservation.png"></div>
+        <br>
+        <div class="row">
+          <h5 class="col-md-8 offset-md-2">
+            Flight Preservation deals with the Colony’s impact on the world around them, and the world’s impact on the
+            Colony. They work closely with the other Flights to ensure they all are being mindful with their consumption
+            of resources, and the organization of space. They work especially close with Flight Populace, to ensure
+            they’re able to produce enough for Nimbats to prosper, and for Visitants to live without issues. With this
+            coordination established between both Flights, every inhabitant of the Colony should have their needs to
+            live catered to. Should complications arise, problem-solving is delegated to the following sects.
+          </h5>
         </div>
       </h5>
     </mat-card-content>
@@ -75,76 +27,134 @@
   <br>
   <mat-card>
     <mat-card-title>
-      <h3>Katell, Flight Preservation Elder</h3>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">The Three Sects of Flight Preservation
+        </h3>
+      </div>
     </mat-card-title>
     <mat-card-content>
-      <h5 class="notes">
-        "Katell is by far the most adorable Nimbat Elder described to me. Short like a dumpling, and wearing a pair of
-        big glasses, she’s defined as one of the more “studious” Nimbats in the Colony. Typically buries her nose into a
-        book or a report. Apparently she holds a book club–oh, she’s just a nerdy thing! I hope this report doesn’t fall
-        into her paws, I don’t mean to embarrass her. Even so, her demeanor isn’t by accident. Being an Elder Nimbat for
-        Flight Preservation has put her straight into the more complicated aspects of the very integrity of the Colony,
-        from its structures and systems to its resources. Shockingly, she has control over electricity, which she
-        personally uses to fuel a number of processes, or shock someone that tries to bully her too much."
-      </h5>
-      <h5>
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <h4 style="text-align:center;">Artemis</h4>
-              <h6 style="text-align:center;">Maintenance Sect Leader</h6>
-            </div>
-            <div class="col">
-              <h4 style="text-align:center;">Titania</h4>
-              <h6 style="text-align:center;">Forestry Sect Leader</h6>
-            </div>
-            <div class="col">
-              <h4 style="text-align:center;">Charlotte/Alexis</h4>
-              <h6 style="text-align:center;">Scribing Sect Leader</h6>
-            </div>
-          </div>
+      <div class="row">
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Maintenance</h4>
+          The Maintenance sect focuses on the primary aspect of keeping Colony resources and infrastructural integrity
+          at tip-top upkeep. Before projects can begin, whether it’s Production requiring use of a resource or the
+          construction of a new building, this sect refers to its acute knowledge of the purposes of roads and building
+          codes as well as the reserves of Colony materials in order to reliably come to collected and informed
+          decision-making.
+        </h5>
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Forestry</h4>
+          This sect is concerned with the use of resources that exist outside of the Colony, and how the Nimbats affect
+          the land around them. Whether it be logging, hunting, or potential Colony expansion, the Forestry sect is the
+          first to inspect and sign off on any activity that may impact the environment outside of the Colony. They are
+          also tasked with forest fire prevention, mostly by clearing the underbrush and felling trees as needed.
+        </h5>
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Scribing</h4>
+          The record-keepers and historians in this sect have procured vast knowledge of the Colony’s lengthy span. They
+          do not have events from the outside world well-documented unless it has concerned the Colony in the past. The
+          history of the Colony and its related records are created and curated by Scribing with the intent of
+          preserving the knowledge of past eras for future inhabitants, be they Nimbat or Visitant alike. Artifacts and
+          writing from the past are also kept by Scribing, some of which are on public display.
+        </h5>
+      </div>
+    </mat-card-content>
+  </mat-card>
+  <br>
+  <mat-card>
+    <mat-card-title>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">Notable Members</h3>
+      </div>
+    </mat-card-title>
+    <mat-card-content>
+      <div class="row">
+        <h5 class="notes col-md-6 offset-md-2">
+          <h4>Katell, Flight Preservation Elder</h4>
+          “My interview with the Elder of Preservation did not disappoint. A cataloguer of information and an astute
+          observer of the environs, this adorable Nimbat had much to share with me, happy to elaborate on some of the
+          more natural and historical foundations of the Colony. Getting her to talk about herself, however, was a bit
+          of a hill to traverse. That is when her nervousness took center stage, and on impulse she would cover her
+          muzzle in a document or two. When she is out of her office, she is either hosting her book club or relaxing at
+          home. Public outings are reserved mostly for her close friends and fellow Elders, who are not mutually
+          exclusive. Katell had made it a point to share that she was well-practiced in the magical art of electricity.
+          Perhaps, she just wanted to give off the impression that she had worthy proverbial fangs after her
+          heart-melting timidness was demonstrated to me.”
+        </h5>
+        <div class="col-md-2">
+          <div style="text-align:center"><img style="width: 50%; height: auto;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/katell.png"></div>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col notes" style="text-align:justify">
-              "Artemis is often described as a web-maker. If you ask about something, he knows almost all about it,
-              where to get it, and how they use it. If he doesn’t know about it, it probably just got introduced to the
-              Colony and he’s already busily incorporating it into his organized “web” of info. His talents in
-              organization gave him a surefire election into leading this sect. Supposedly when he isn’t working, some
-              say that he secretly enjoys venturing out of the Colony to “see an old friend,” whoever that might be."
-            </div>
-            <div class="col notes" style="text-align:justify">
-              “Most Nimbats work closely with their sect leaders. Some have a slightly distant approach, treating the
-              sect leader like an overseer that puts in orders through others, rather than being a manager that stands
-              among their workers. For Titania, she rarely ever sees her fellow peers in Forestry…and that’s for a
-              reason. It was a hell of a time trying to locate and interview this Nimbat, and it was even more jarring
-              and weary trying to actually talk with her. Titania claims to serve only two beings: the will of the wood,
-              and Katell. The former notion is supported by the fact that she is very much a person well-consumed by
-              nature. Her fur has flecks of dirt and grass, but it still has the serene freshness and smell of spring
-              water and jungle rain. Fireflies often accompany her at night. Her appearance changes with the seasons,
-              making her more like a plant than a Nimbat. Some have even claimed that moss could grow on her. As for
-              speaking, she seems…distant. Like her attention is focused mostly on something in the air, which she
-              regards as her priority audience. You are but a lamb to her, and don’t have that same privilege. It’s as
-              strange as talking to a stereotypical seer or an oracle. Even when she makes her monthly reports to
-              Katell, she’s just as off-putting. What in Mother Nature does she do in her free time…?”
-            </div>
-            <div class="col notes" style="text-align:justify">
-              "“Thin but wide reading glasses on an older-looking Nimbat that works in Preservation? You know full well
-              that she’s gonna be some kind of librarian. What you might not know is that she is the sect leader and
-              organizer for Scribing—she seems to maintain a more humble outlook to herself, not perusing around her
-              subjects and giving them orders. Instead, she does her work behind her big, clean, cute desk full of
-              knickknacks and turned-in books. Many of the writings found in her library are not of human making,
-              creating a wondrous opportunity to peek into how Nimbats perceived and recorded the world around them. Not
-              just historical accounts, but stories of expression, or fables for children, or personal ramblings put
-              into story format. Some of them have even been written by Charlotte herself. Now, as I write this, she
-              wanted me to insert a small note:"
-              <i class="notes">”While all the “Checking me out” comments were cute the first few times, it has gotten to
-                be a bit of a
-                bother. Please come up with a more creative and less library-made flirt.” </i>
-            </div>
-          </div>
+        <div class="col-md-8 offset-md-2">
+          <hr>
         </div>
-      </h5>
+      </div>
+      <div class="row pb-1">
+        <div class="col-md-2 offset-md-2">
+          <div style="text-align:center"><img style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/artemis.png"></div>
+        </div>
+        <h5 class="notes col-md-6">
+          <h4>Artemis, Maintenance Sect Leader
+          </h4>
+          "Artemis is often described as a web-maker. If you ask about something, he knows almost all about it, where to
+          get it, and how they use it. If he doesn’t know about it, it probably just got introduced to the Colony and he
+          is already busily incorporating it into his organized “web” of info. His talents in organization gave him a
+          surefire election into leading this sect. Supposedly when he isn’t working, some say that he secretly enjoys
+          venturing out of the Colony to “see an old friend,” whoever that might be."
+        </h5>
+        <div class="col-md-8 offset-md-2">
+          <hr>
+        </div>
+      </div>
+      <div class="row">
+        <h5 class="notes col-md-7 offset-md-2">
+          <h4>Titania, Forestry Sect Leader
+          </h4>
+          “Most Nimbats work closely with their sect leaders. Some have a slightly distant approach, treating the sect
+          leader like an overseer that puts in orders through others, rather than being a manager that stands among
+          their workers. For Titania, she rarely ever sees her fellow peers in Forestry…and that’s for a reason. My
+          patience was already challenged in my attempts to actually locate her, despite many supervisors and informants
+          within Preservation suggesting that I leave her be. Conversing with her was the real hurdle, given that she is
+          inherently socially inept and regards me like I am naught but gentle wind. Titania claims to serve only two
+          beings: the will of the wood, and Katell. The former notion is supported by the fact that she is very much a
+          person well-consumed by nature. Her fur has flecks of dirt and grass, but it still has the serene freshness
+          and smell of spring water and jungle rain. Fireflies often accompany her at night. Her appearance changes with
+          the seasons, making her more like a plant than a Nimbat. Some have even claimed that moss could grow on her.
+          As for speaking, she seems…distant. Her attention is focused mostly on something in the air, which she regards
+          as her priority audience. You are but a lamb to her, and you lack that same privilege. The estranged
+          presentation of talking to a stereotypical seer or an oracle. Even when she makes her monthly reports to
+          Katell, she can be just as off-putting. What in Mother Nature does she do in her free time…?”
+        </h5>
+        <div class="col-md-1">
+          <div style="text-align:center"><img style="width: 100%; height: auto;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/titania.png"></div>
+        </div>
+        <div class="col-md-8 offset-md-2">
+          <hr>
+        </div>
+      </div>
+      <div class="row pb-1">
+        <div class="col-md-2 offset-md-2">
+          <div style="text-align:center"><img style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/charlotte.png"></div>
+        </div>
+        <h5 class="notes col-md-6">
+          <h4>Charlotte, Scribing Sect Leader
+          </h4>
+          “Thin, wide-rimmed reading glasses on an older-looking Nimbat that works in Preservation? My first and
+          rightful guess was librarian. What I learned in time is that she is the sect leader and organizer for
+          Scribing. She seems to maintain a more humble outlook to herself, not perusing around her subjects and giving
+          them orders. Instead, she does her work behind her big, clean, cute desk full of knickknacks and turned-in
+          books. Many of the writings found in her library are not of human making—although some are—creating a wondrous
+          opportunity to peek into how Nimbats perceived and recorded the world around them. Not just historical
+          accounts, but stories of expression, or fables for children, or personal ramblings put into story format. Some
+          of them have even been written by Charlotte herself. By her request, she wanted me to include a personal note
+          for any possible reader that might, on the off chance, find my writings:"
+          <i class="notes">”While all the “Checking me out” comments were cute the first few times, it has gotten to be a bit of a
+          bother. Please come up with a more creative and less library-made flirt.”</i>
+        </h5>
+      </div>
     </mat-card-content>
   </mat-card>
 </div>
