--- a/src/app/progression/progression.component.html
+++ b/src/app/progression/progression.component.html
@@ -1,80 +1,159 @@
 <div class="container-fluid">
-    <mat-card>
-      <mat-card-title><h3>Flight Progression</h3></mat-card-title>
-      <mat-card-content>
+  <mat-card>
+    <mat-card-title>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">Flight Progression
+        </h3>
+      </div>
+    </mat-card-title>
+    <mat-card-content>
       <h5>
-        <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/progression.png"></div>
+        <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px"
+            src="assets/progression.png"></div>
         <br>
-        Flight Progression is made up by the most curious and “out-going” Nimbats in the Colony. They reach out to study the outside world, and return to the Colony to report their findings and teachings. The Progression Flight sees that the Colony is able to adapt and progress as they discover new things, be it new teachings over a process or idea, or objects that might prove useful to the Colony. When a Visitant enters the Colony, they're the ones to take their gear and study it to ensure that it is not dangerous, while also looking through potential usage of whatever equipment the Visitant has. For the most part, the forest theme of the Colony is maintained, and so most technology is rejected if it cannot be recreated in a natural or magical process.
-      </h5>
-      </mat-card-content>
-    </mat-card>
-    <br>
-    <mat-card>
-      <mat-card-title><h3>The Three Sects of Flight Progression</h3></mat-card-title>
-      <mat-card-content>
-      <h5>
-        <div class="container">
-          <div class="row">
-              <div class="col">
-                  <h4 style="text-align:center;">Acquisition</h4>
-              </div>
-              <div class="col">
-                  <h4 style="text-align:center;">R&D</h4>
-              </div>
-              <div class="col">
-                  <h4 style="text-align:center;">Education</h4>
-              </div>
-          </div>
-      </div>
-      <div class="container">
         <div class="row">
-            <div class="col" style="text-align:justify">
-                Nimbats within this sect spend most of their lives away from the Colony. They venture out around the world, meeting new people, learning new things, and picking up new objects that fascinate them. At some point they return home, and produce their findings with the rest of the Flight. Not every single thing will be utilized, but those that will wind up going into one of the following sects.             </div>
-            <div class="col" style="text-align:justify">
-                This sect is designated for objects brought in by Acquisition. If its function could provide a practical and beneficial use to the Colony without contradicting its values, it is reverse-engineered over time in order to gain a full understanding of how it works before it is proposed for reproduction for the Colony’s use. For example, a fishing rod brought in by a Nimbat could be broken apart and fiddled with to understand how each part provides to the mechanism, and its benefits are practiced. If this sect deems it worthy of reproduction, the idea of the fishing rod may be introduced to other Flights.            </div>
-            <div class="col" style="text-align:justify">
-                This sect is designated for teachings brought in by Acquisition. These could range from practical teachings such as new ways to understand math, physics, magic, and so on, to philosophic and political teachings that could contribute to understandings within the Colony. Just like the previous sect, if it is deemed useful and beneficiary without harming the core of the Colony’s values, it may be proposed for incorporation.             </div>
+          <h5 class="col-md-8 offset-md-2">Flight Progression is made up of the most curious and “out-going” Nimbats in
+            the Colony. They reach out to study the outside world, and return to the Colony to report their findings and
+            teachings. The Progression Flight sees that the Colony is able to adapt and progress as they discover new
+            things, be it new teachings over a process or idea, or objects that might prove useful to the Colony. When a
+            Visitant enters the Colony, they're the ones to take their gear and study it to ensure that it is not
+            dangerous, while also looking through potential usage of whatever equipment the Visitant has. For the most
+            part, the sanctity of the Colony’s forest is maintained, and so most technology is rejected if it cannot be
+            recreated in a natural or magical process.
+          </h5>
         </div>
-    </div>
       </h5>
-      </mat-card-content>
-    </mat-card>
-    <br>
-    <mat-card>
-        <mat-card-title><h3>Brianna, Flight Progression Elder</h3></mat-card-title>
-        <mat-card-content>
-        <h5 class="notes">
-            "The youngest of the Elders, albeit still quite old by human standards, Brianna is a curious and playful spirit. She’s much for conversation, but only if it means that she can potentially steal something shiny from your person if you aren’t paying attention—my own wrist watch got taken, and it took an hour to get it back! When Brianna isn’t being a little devil, she’s tinkering with some object, making interesting trinkets and toys. It’s likely she has some form of metallurgy in her magic capacity."        </h5>
-        <h5>
-          <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h4 style="text-align:center;">Whisper</h4>
-                    <h6 style="text-align:center;">Acquisition Sect Leader</h6>
-                </div>
-                <div class="col">
-                    <h4 style="text-align:center;">Mila</h4>
-                    <h6 style="text-align:center;">R&D Sect Leader</h6>
-                </div>
-                <div class="col">
-                    <h4 style="text-align:center;">Anne</h4>
-                    <h6 style="text-align:center;">Education Sect Leader</h6>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-          <div class="row">
-              <div class="col notes" style="text-align:justify">
-                "Strangely, no one seems to know Whisper’s actual name. She’s quite the notorious one, and has a reputation of being able to get anything from anywhere. I’m personally unsure how she does come about most of the things she finds, but I theorize she has strong clairvoyance that she keeps under wraps.  I can’t tell how much of them are actually true, but she has given a story for each of the things she acquiesced. She’s regaled me with tales of daring escapes and panicked portaling, but most of these stories are about things that don’t seem to be too useful for the Flight at large. The girl certainly likes her shiny things."              </div>
-              <div class="col notes" style="text-align:justify">
-                "Mila’s likely the most curious Nimbat in the colony. She tends to fly around in a long lab coat, and likes to look at every little thing on her routes through the colony. This usually causes her to be late to meetings (evidenced by the fact that she was nearly half an hour late to our scheduled one), but most other Colony residents write it off as “Typical Mila time.” A few say that they’ve told her to arrive earlier than other invitees, and even then she still tends to get there late."              </div>
-              <div class="col notes" style="text-align:justify">
-                "Anne is, in a way, a mother to every Nimbat who grew up in the Colony. She takes her job incredibly seriously, and is constantly working with other Sects in other Flights to make her educational program as good as it can be. She’s told me about a magic she’s managed to learn and develop herself; A form of telepathy, which allows her to verbally communicate seamlessly with anyone across any culture. She says that she looks into someone's mind, and learns their language in moments. For the rest of my time with her, she rattled through what seemed like a hundred different languages and dialects, all learned from places she’s visited. It was uncanny to hear a Nimbat speak in the same accent of my home town, █████████."              </div>
-          </div>
-      </div>
-        </h5>
-        </mat-card-content>
-      </mat-card>
-  </div>
+    </mat-card-content>
+  </mat-card>
   <br>
+  <mat-card>
+    <mat-card-title>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">The Three Sects of Flight Preservation
+        </h3>
+      </div>
+    </mat-card-title>
+    <mat-card-content>
+      <div class="row">
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Acquisition</h4>
+          Nimbats within this sect spend most of their lives away from the Colony. They venture out around the world,
+          meeting new people, learning new things, and picking up new objects that fascinate them. At some point they
+          return home, and produce their findings with the rest of the Flight. Not every single thing will be utilized,
+          but those that will wind up going into one of the following sects.
+        </h5>
+        <h5 class="col-md-8 offset-md-2">
+          <h4>R&D</h4>This sect is concerned with the use of resources that exist outside of the Colony, and how the
+          Nimbats affect the land around them. Whether it be logging, hunting, or potential Colony expansion, the
+          Forestry sect is the first to inspect and sign off on any activity that may impact the environment outside of
+          the Colony. They are also tasked with forest fire prevention, mostly by clearing the underbrush and felling
+          trees as needed.
+        </h5>
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Education</h4>This sect is designated for teachings brought in by Acquisition. These could range from
+          practical teachings such as new ways to understand math, physics, magic, and so on, to philosophic and
+          political teachings that could contribute to understandings within the Colony. Just like the previous sect, if
+          it is deemed useful and beneficiary without harming the core of the Colony’s values, it may be proposed for
+          incorporation.
+
+        </h5>
+      </div>
+    </mat-card-content>
+  </mat-card>
+  <br>
+  <mat-card>
+    <mat-card-title>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">Notable Members</h3>
+      </div>
+    </mat-card-title>
+    <mat-card-content>
+      <div class="row">
+        <h5 class="notes col-md-6 offset-md-2">
+          <h4>Brianna, Flight Progression Elder </h4>
+          “I refuse to step into the main facility for Progression without absolute necessity. Much of its personnel had
+          proved kindly and co-operational, up until I reached the very height of the operation: Brianna. Her office was
+          unkempt and dimly-lit, illuminated only by neon signs on the wall, and her plasma screen television. Snack
+          wrappers and beverage cans were discarded onto the floor. My foot was attacked several times by a Roomba with
+          angry eyes scribbled on it by Sharpie. Brianna herself could not boast of much formality. Almost immediately,
+          she was trying to dig through my pockets and travel bag for anything to satiate her infantile curiosity. My
+          own phone was snatched up by her ability to manipulate metals. Our conversation consisted of surface glance
+          descriptors of her primary tasks—that being commissioning acquisitions from the world beyond the Colony or
+          inviting specific candidates into the Colony for interview. Other than that, she just showed me her gaming
+          consoles and knickknacks around her office space. Before I excused myself in a hasty attempt to leave, I noted
+          that there was a shelf of college-level history textbooks sitting off in the corner. For what purpose is not
+          something I am in the mood to spend mental energy on, at the moment.”
+        </h5>
+        <div class="col-md-2">
+          <div style="text-align:center"><img style="width: 70%; height: auto;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/brianna.png"></div>
+        </div>
+        <div class="col-md-8 offset-md-2">
+          <hr>
+        </div>
+      </div>
+      <div class="row pb-1">
+        <div class="col-md-2 offset-md-2">
+          <div style="text-align:center"><img style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/whisper.png"></div>
+        </div>
+        <h5 class="notes col-md-6">
+          <h4>Whisper, Acquisition Sect Leader
+          </h4>
+          “As it turns out, the name “Whisper” is little more than a moniker, and I believe I know why he bothers with
+          such a level of anonymity. To put it bluntly, he seems to fulfill the persona of a black market acquisitioner.
+          That is to say that he can seemingly get anything from anywhere in the world. These are not mere objects of
+          fancy, either. A step into his office revealed a concerning repertoire of items that I do not think a Nimbat
+          of the Colony’s statutes should have. Thermocyclers, 3D printing machines, and canisters of bleach were among
+          these. Much of these items were either pending review, or denied outright. Much of what he was willing to tell
+          me was his tales of daring-do in trying to nab these objects. Thrilling thievery and narrow escapes, either
+          performed by his team or himself. Does he actually enjoy luxury, or just the excitement of the operation?”
+        </h5>
+        <div class="col-md-8 offset-md-2">
+          <hr>
+        </div>
+      </div>
+      <div class="row">
+        <h5 class="notes col-md-7 offset-md-2">
+          <h4>Mila, R&D Sect Leader
+          </h4>
+          “A Nimbat in a lab coat was bound to happen, in hindsight. Stepping away from any conversations or discourse
+          about how and why tailors made a lab coat for her size, Mila is easily the most distracted in her line of
+          work. Her associates have recounted many late arrivals to otherwise important meetings on her end. An
+          interview with her, thankfully, was a little more unfocused than I would have hoped. The occasional diatribe
+          of unrelated topics came up, but it was not difficult to bring her back to center. I postulate that her
+          distractedness is a boon as much as it is a curse—her awareness and ability to multitask proves her efficiency
+          in reverse-engineering and configuring the purpose and mechanisms of many objects and devices from the world
+          beyond, at the cost of preoccupying herself from other obligations. She also naps a lot.”
+        </h5>
+        <div class="col-md-1">
+          <div style="text-align:center"><img style="width: 100%; height: auto;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/mila.png"></div>
+        </div>
+        <div class="col-md-8 offset-md-2">
+          <hr>
+        </div>
+      </div>
+      <div class="row pb-1">
+        <div class="col-md-2 offset-md-2">
+          <div style="text-align:center"><img style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/anne.png"></div>
+        </div>
+        <h5 class="notes col-md-6">
+          <h4>Anne, Education Sect Leader
+          </h4>
+          “Imagine if that favorite elementary school teacher had a federal occupation. That is the most blunt and
+          effective descriptor for Anne that I can put forth. Much of her job orientates around what her sect implies:
+          educating. More specifically, teaching different facilities—Flight-based or independent or otherwise—about any
+          newly-implemented innovations that have been introduced into the Colony. Her magical talent includes a potent
+          telepathy, which she primarily uses to adopt different ways of speaking with individuals from different
+          corners of the globe. Languages, and even accents, are adopted by her dialect in mere seconds. I do not
+          believe that a single sensible person to ever come across the Colony would have legitimate trouble
+          understanding its makeup and goings-on, but the warmth and inclusivity of Anne might provide a pinch of
+          comforting familiarity.”
+        </h5>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>
+<br>
