--- a/src/app/proliferation/proliferation.component.html
+++ b/src/app/proliferation/proliferation.component.html
@@ -1,87 +1,105 @@
 <div class="container-fluid">
-    <mat-card>
-      <mat-card-title><h3>Flight Proliferation</h3></mat-card-title>
-      <mat-card-content>
+  <mat-card>
+    <mat-card-title>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">Flight Proliferation</h3>
+      </div>
+    </mat-card-title>
+    <mat-card-content>
       <h5>
-        <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/proliferation.png"></div>
+        <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px"
+            src="assets/proliferation.png"></div>
         <br>
-        Flight Proliferation is all about the continuation of the Nimbat species. They’re the breeding experts, and tend to handle the most Visitants. They also handle the majority of child care assistance, and offer incentives to those willing to partake. Visitants that engage in this, for example, are given housing and access to the food supply. While Visitants are allowed to have their own jurisdiction within the Colony, they are often encouraged to become breeders. In short, the Proliferation Flight cares about reproducing… a LOT.
-      </h5>
-      </mat-card-content>
-    </mat-card>
-    <br>
-    <mat-card>
-      <mat-card-title><h3>The Three Sects of Flight Proliferation</h3></mat-card-title>
-      <mat-card-content>
-      <h5>
-        <div class="container">
-          <div class="row">
-              <div class="col">
-                  <h4 style="text-align:center;">Copulation</h4>
-              </div>
-              <div class="col">
-                  <h4 style="text-align:center;">Fertility</h4>
-              </div>
-              <div class="col">
-                  <h4 style="text-align:center;">Midwifing</h4>
-              </div>
-          </div>
-      </div>
-      <div class="container">
         <div class="row">
-            <div class="col" style="text-align:justify">
-                Nimbats in this sect are more concerned with the act of proliferation within itself. A lot of them take on the task of “bed-warmers,” though, they’ve taken up other tasks as well. Partaking in breeding does not necessarily seem to equivocate to being a part of Flight Proliferation, but those that are a part of Flight Proliferation can partake in breeding. In some instances, these Nimbats just might observe, or even become a part of the action on request. 
-            </div>
-            <div class="col" style="text-align:justify">
-                These Nimbats aren’t often part of the act itself, but play an integral part in ensuring copulation. Whether by magic or apothecary means, they provide partners with supplements that provide effects such as ovulation, increased sperm production, increased potency and virility, and even more exciting measures such as anatomical manipulation.
-            </div>
-            <div class="col" style="text-align:justify">
-                When it comes to childbirth and early-life care, the Nimbats of the Midwifing sect are experts. When Visitants became more of a regular occurrence, adaptation had to be done, but now Nimbat and Visitant alike are referred to Nimbats of Flight Populace once the family is off to their own devices.
-            </div>
+          <h5 class="col-md-8 offset-md-2">
+            Flight Proliferation is all about the continuation of the Nimbat species. They achieve this goal through a
+            combination of prenatal care and generalized universal healthcare for Nimbats and visitants alike. They can
+            be best described as the doctors, nurses, and health advocates of the Colony, working diligently with the
+            other Flights to make sure everyone is in tip top shape. They are often seen collaborating with Protection’s
+            Security sect, training their medical technicians, or the Populace sect’s Intervention sect to schedule
+            check ups.
+          </h5>
         </div>
-    </div>
       </h5>
-      </mat-card-content>
-    </mat-card>
-    <br>
-    <mat-card>
-        <mat-card-title><h3>Rosmerta, Flight Proliferation Elder</h3></mat-card-title>
-        <mat-card-content>
-        <h5 class="notes">
-            "Rosmerta was a… fascinating meeting, to say the least. If I were to openly describe what sort of Nimbat she is, I’d say she is awfully motherly. In hindsight, I suppose that’s to be expected. Her magic seems to focus on fertility aspects, such as increasing stimulation through mere touch, among…other effects. Her entire demeanor isn’t completely focused on her Flight’s namesake, though. Rosmerta has said that she is into a few of the local sports in the Colony, such as a kind of activity that I can only describe as some kind of aerial volleyball. Others in the Colony have warned me not to cross those in her care. Apparently, underneath her honey-sweet exterior, is a fantastic display of power. Her true magic potential offers up a whole barrage of elemental power. Mothers have to be tough, I suppose."
-        </h5>
-        <h5>
-          <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h4 style="text-align:center;">Hyacinth</h4>
-                    <h6 style="text-align:center;">Copulation Sect Leader</h6>
-                </div>
-                <div class="col">
-                    <h4 style="text-align:center;">Azalea</h4>
-                    <h6 style="text-align:center;">Fertility Sect Leader</h6>
-                </div>
-                <div class="col">
-                    <h4 style="text-align:center;">Mary</h4>
-                    <h6 style="text-align:center;">Midwifing Sect Leader</h6>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-          <div class="row">
-              <div class="col notes" style="text-align:justify">
-                "This particular Nimbat crops up often in the various rooms and facilities situated in Proliferation’s headquarters. Anyone is more likely to see her than Rosmerta herself! This is likely due to the fact that she often takes up the helm of matchmaker, even in situations where a Visitant is without an Advocate to initiate a ‘bonding ceremony.’ Evidently, Hyacinth is sibling to Azalea, the Fertility Sect leader. The two had dabbled in a range of alchemic practice and occasionally got into trouble for their antics, but their talents were recognized and both were elected by Rosmerta.."
-              </div>
-              <div class="col notes" style="text-align:justify">
-                "Hyacinth’s sister is one that does not often take up the more direct events of Proliferation, but she does engage in another side of it that is equally important. Her practices in alchemy and pharmatic studies have made her a perfect provisioner for fertility-based supplements. Anything to spice up the experience, to aid in child-making, or even just to experiment, she might have something that’ll help."
-              </div>
-              <div class="col notes" style="text-align:justify">
-                "The leader of the Midwifing Sect is an older Nimbat known as Mary. Like many of the Nimbats involved here, she maintains a more maternal shape, not too dissimilar to Rosmerta. But unlike her compatriots, she finds time to provide other services. In some cases, she welcomes a suitable partner or a Visitant into a private space, inviting them to partake in the typical act of breeding. Her intentions are absolutely direct, in that she will fully attempt to make offspring of her own to add to those she is caring for. Some proclaim she could be a suitable Elder, for when Rosmerta is no longer in the position."
-              </div>
-          </div>
-      </div>
-        </h5>
-        </mat-card-content>
-      </mat-card>
-  </div>
+    </mat-card-content>
+  </mat-card>
   <br>
+  <mat-card>
+    <mat-card-title>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">The Two Sects of Flight Proliferation</h3>
+      </div>
+    </mat-card-title>
+    <mat-card-content>
+      <div class="row">
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Fertility</h4>
+          This sect is focused primarily on ensuring Nimbat parents-to-be are able and ready to safely produce healthy
+          offspring. They also handle interspecies parents, if an Advocate and their Visitant wish to reproduce as
+          well. Through different apothecarian or even magical means, the sect prides itself on its success in
+          breeding, or the purposeful lack thereof.
+        </h5>
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Healthcare</h4>
+          The Healthcare sect is focused, obviously, on providing healthcare to all colony inhabitants, Nimbats and
+          Visitants included. They work closely with Flight Populace, and some med-battes are known to make house calls
+          as needed as well. From early life medicine, to late-life care, the sect is knowledgeable in all aspects of
+          health and healthiness.
+        </h5>
+      </div>
+    </mat-card-content>
+  </mat-card>
+  <br>
+  <mat-card>
+    <mat-card-title>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">Notable Members</h3>
+      </div>
+    </mat-card-title>
+    <mat-card-content>
+      <div class="row">
+        <h5 class="notes col-md-7 offset-md-2">
+          <h4>Rosmerta, Flight Proliferation Elder</h4>
+          "Rosmerta was a… fascinating meeting, to say the least. If I were to openly describe what sort of Nimbat she
+          is,
+          I’d say she is awfully motherly. In hindsight, I suppose that’s to be expected. Her magic seems to focus on
+          fertility aspects, such as increasing stimulation through mere touch, among…other effects. Her entire demeanor
+          isn’t completely focused on her Flight’s namesake, though. Rosmerta has said that she is into a few of the
+          local
+          sports in the Colony, such as a kind of activity that I can only describe as some kind of aerial volleyball.
+          Others in the Colony have warned me not to cross those in her care. Apparently, underneath her honey-sweet
+          exterior, is a fantastic display of power. Her true magic potential offers up a whole barrage of elemental
+          power. Mothers have to be tough, I suppose."
+        </h5>
+        <div class="col-md-1">
+          <div style="text-align:center"><img style="width: 100%; height: auto;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/rosmerta.png"></div>
+        </div> 
+        <div class="col-md-8 offset-md-2"><hr></div>
+      </div>
+      <div class="row pb-1">
+        <div class="col-md-2 offset-md-2">
+          <div style="text-align:center"><img style="width: 85%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/hyacinthazalea.png"></div>
+        </div>
+        <h5 class="notes col-md-6">
+          <h4>Hyacinth & Azalea, Fertility Sect Co-Leaders</h4>
+          “Perhaps these two siblings were stationed here in some kind of forewarning for nepotism. Or, more likely, Hyacinth and Azalea simply brought out the absolute best from one another, something I find curious given their reported history of trouble revolving around potion-making. Regardless, the heads of the Fertility sect practice in two modes: Hyacinth is the matchmaker, bringing about potential new couples (and including Visitants in the picture) or strengthening the bonds of existing pairs. Azalea handles the physiological side of things, putting her alchemical talents to good use in provisions. What sort of bodily thing could be used to bolster a relationship between a Visitant and a Nimbat? Set up an appointment.”
+        </h5>
+        <div class="col-md-8 offset-md-2"><hr></div>
+      </div>
+      <div class="row">
+        <h5 class="notes col-md-7 offset-md-2">
+          <h4>Mary, Healthcare Sect Leader
+          </h4>
+          ”Conveniently, Healthcare’s sect leader is learned in the art of medicine and physical treatment. The reason she keeps her company with medical experts in the Colony is in order to maintain a wellspring of knowledge. What is a little unique about her, though, is her mannerism. The woman comes off more like a compassionate nurse than a doctor. Some speculate that her expertise and demeanor similar to that of Rosmerta puts her directly in line for Eldership when the current Elder is no longer at her position.”
+        </h5>
+        <div class="col-md-1">
+          <div style="text-align:center"><img style="width: 100%; height: auto;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/mary.png"></div>
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>
+<br>
