--- a/src/app/protection/protection.component.html
+++ b/src/app/protection/protection.component.html
@@ -1,97 +1,152 @@
 <div class="container-fluid">
   <mat-card>
-    <mat-card-title><h3>Flight Protection</h3></mat-card-title>
+    <mat-card-title>
+      <div class="row">
+        <h3 class="col-md-8 offset-md-2">Flight Protection
+        </h3>
+      </div>
+    </mat-card-title>
     <mat-card-content>
-    <h5>
-      <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/protection.png"></div>
-      <br>
-      Flight Protection is tasked with defending and hiding the Colony. 
-      They have powerful illusionists, and train some Nimbats to be surprisingly adept fighters, capable of felling beasts much larger than they are. 
-      Additionally, when an Advocate returns to the Colony with a new Visitant, Flight Protection is the first to meet with them, to get an understanding as to how they are as a person in order to ensure that they are not dangerous. 
-      In some cases, Flight Protection has had some of its members leave the Colony border in order to come to the rescue of an unfortunate passerby under attack.
-    </h5>
+      <h5>
+        <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px"
+            src="assets/protection.png"></div>
+        <br>
+        <div class="row">
+          <h5 class="col-md-8 offset-md-2">
+            Flight Protection is tasked with defending and hiding the Colony. They have powerful illusionists, and train
+            some Nimbats to be surprisingly adept fighters, capable of felling beasts much larger than they are.
+            Additionally, when an Advocate returns to the Colony with a new Visitant, Flight Protection is the first to
+            meet with them, to get an understanding as to how they are as a person in order to ensure that they are not
+            dangerous. In some cases, Flight Protection has had some of its members leave the Colony border in order to
+            come to the rescue of an unfortunate passerby under attack.
+          </h5>
+        </div>
+      </h5>
     </mat-card-content>
   </mat-card>
   <br>
   <mat-card>
-    <mat-card-title><h3>The Three Sects of Flight Protection</h3></mat-card-title>
-    <mat-card-content>
-    <h5>
-      <div class="container">
-        <div class="row">
-            <div class="col">
-                <h4 style="text-align:center;">Illusion</h4>
-            </div>
-            <div class="col">
-                <h4 style="text-align:center;">Defense</h4>
-            </div>
-            <div class="col">
-                <h4 style="text-align:center;">Security</h4>
-            </div>
-        </div>
-    </div>
-    <div class="container">
+    <mat-card-title>
       <div class="row">
-          <div class="col" style="text-align:justify">
-            As mentioned above, the illusionist Nimbats are primarily in charge of maintaining the illusory walls that hide the Colony from the public eye. 
-            It is impossible to see from the outside. 
-            It is impossible to smell, hear, or taste anything from the Colony when one is outside the illusory wall. 
-            It’s not even easy to just waltz into the Colony on accident, as several extra illusions are put in place to detract and dissuade travelers and wanderers from stumbling into it. In those rare occasions when someone does arrive, they are deemed “lucky,” and are worthy of investigation. 
-            The illusionists also hide other things within the Colony proper.
-          </div>
-          <div class="col" style="text-align:justify">
-            In circumstances where violence is witnessed, the Defense sect is usually ready to deal with the threat, utilizing their magical skills in a barrage to subdue or outright eliminate the threat. 
-            It is said that when situations are dire, the more pronounced and powerful Nimbats in this sect are brought out to individually handle the situation. The resulting conflict might cause damage to the external parts of the Colony, so priority is given to the rest of the sect to get everyone not engaged in the scuffle out of the area. 
-          </div>
-          <div class="col" style="text-align:justify">
-            The Security sect takes on a similar role to that of Defense, but instead it focuses on domestic matters. 
-            Clearly-seen bands that are wrapped around the root of the right arm indicate members of this sect. 
-            These sorts can be approached when issues arrive, and assistance is needed, whether it’s something violent or there’s just someone in need of help. 
-          </div>
+        <h3 class="col-md-8 offset-md-2">The Three Sects of Flight Protection
+        </h3>
       </div>
-  </div>
-    </h5>
+    </mat-card-title>
+    <mat-card-content>
+      <div class="row">
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Illusion</h4>
+          As previously mentioned, the illusionist Nimbats are primarily in charge of maintaining the illusory walls
+          that hide the Colony from the public eye. It is impossible to see from the outside. It is impossible to smell,
+          hear, or taste anything from the Colony when one is outside the illusory wall. It’s not even easy to just
+          waltz into the Colony on accident, as several extra illusions are put in place to detract and dissuade
+          travelers and wanderers from stumbling into it. In those rare occasions when someone does arrive, they are
+          deemed “lucky,” and are worthy of investigation. The illusionists also hide other things within the Colony
+          proper.
+        </h5>
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Defense</h4>
+          In circumstances where violence is witnessed, the Defense sect is usually ready to deal with the threat,
+          utilizing their magical skills in a barrage to subdue or outright eliminate the threat. It is said that when
+          situations are dire, the more pronounced and powerful Nimbats in this sect are brought out to individually
+          handle the situation. The resulting conflict might cause damage to the external parts of the Colony, so
+          priority is given to the rest of the sect to get everyone not engaged in the scuffle out of the area.
+        </h5>
+        <h5 class="col-md-8 offset-md-2">
+          <h4>Security</h4>
+          The Security sect takes on a similar role to that of Defense, but instead it focuses on domestic matters.
+          Members of the sect wear basic, yet boldly colored half-ponchos as a clearly identifiable uniform. They tend
+          to act as emergency response personnel, handling everything from the rare fire, to search and rescue, to
+          runaway farm animals.
+        </h5>
+      </div>
     </mat-card-content>
   </mat-card>
   <br>
-  
   <mat-card>
-    <mat-card-title><h3>Eislyn, Flight Protection Elder</h3></mat-card-title>
-    <mat-card-content>
-    <h5 class="notes">
-      "Eislyn is apparently a master illusionist. So much so that even the inhabitants are not completely aware how much of the environment is fabricated. The only guaranteed illusions she deploys is a majority of the external field that hides the Colony, and the spectral clones that occasionally spawn in public spaces. She is described as a quiet, terse, but overall nice Nimbat. Some say that she is fond of sappy and romantic things, and horror stories as well. When she tells a tale, she deploys her illusions just to spice up the scenery. How terrifying! It’s a very good thing she loves the Colony she protects. I didn’t expect an illusionist to not be a trickster…"
-    </h5>
-    <h5>
-      <div class="container">
-        <div class="row">
-            <div class="col">
-                <h4 style="text-align:center;">Eris</h4>
-                <h6 style="text-align:center;">Illusion Sect Leader</h6>
-            </div>
-            <div class="col">
-                <h4 style="text-align:center;">Soteria</h4>
-                <h6 style="text-align:center;">Defense Sect Leader</h6>
-            </div>
-            <div class="col">
-                <h4 style="text-align:center;">Marshall</h4>
-                <h6 style="text-align:center;">Security Sect Leader</h6>
-            </div>
-        </div>
-    </div>
-    <div class="container">
+    <mat-card-title>
       <div class="row">
-          <div class="col notes" style="text-align:justify">
-            "Eris was a fascinating experience. She’s managed to master illusion magic to the extent of making herself purely invisible, though I cannot tell (and she wouldn’t reveal to me) if it was camouflage or actual invisibility. I don’t think there’s much of a difference either way. She talked at length about her ability to change the world around her without anyone really noticing that it wasn’t actually real... She also didn’t say if she was doing it at the time."
-          </div>
-          <div class="col notes" style="text-align:justify">
-            "Soteria is a uniformed Nimbat, cloaked in a lavender-colored covering that hides most of his body below the neck. I had inquired why he seems keen on hiding his shape, and he explained that he simply did not want to frighten me with his repertoire. According to him, he had once resorted to heretical means to amplify the power of his own magic, but the process had permanently damaged his body. Nevertheless, he serves as a clear indicator for how terrifying the Nimbats in Defense can be. He has the ability to create weaponry out of thin air."
-          </div>
-          <div class="col notes" style="text-align:justify">
-            "Marshall is a tall, battle-scarred Nimbat. So tall, in fact, that I honestly mistook her as a Visitant at first. I got to speak at length with her, and she honestly amazed me with her insight on many topics that I felt she would have no idea about. She gave me details on Colony Incident Response Procedures, but asked me not to record anything on paper, for obvious reasons. While her wings are tattered, she’s still able to fly about, albeit slower than smaller and lighter members of her Flight."
-          </div>
+        <h3 class="col-md-8 offset-md-2">Notable Members</h3>
       </div>
-  </div>
-    </h5>
+    </mat-card-title>
+    <mat-card-content>
+      <div class="row">
+        <h5 class="notes col-md-6 offset-md-2">
+          <h4>Eislyn, Flight Protection Elder</h4>
+          “Eislyn is perhaps the most public mystery of the Colony. There are articles of theorizing on even the simpler
+          things such as her actual age, her lineage, her diet, and more. The facts we can state with the most
+          certainty, though, is that the Elder of Protection is a master illusionist. When I was given the opportunity
+          to interview her, it was only through a spectral clone that she uses to incur meetings away from where she
+          actually is. She is also rather terse, and prefers to keep to herself, save for official meetings. But it
+          should be said outright that she is not without hobbies— storytelling is among one of her favorite things to
+          do in the “scant moments” of offtime. Supposedly, in her actual office, she has multiple shelves of tales from
+          across the globe.”
+        </h5>
+        <div class="col-md-2">
+          <div style="text-align:center"><img style="width: 70%; height: auto;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/eislyn.png"></div>
+        </div>
+        <div class="col-md-8 offset-md-2">
+          <hr>
+        </div>
+      </div>
+      <div class="row pb-1">
+        <div class="col-md-2 offset-md-2">
+          <div style="text-align:center"><img style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/eris.png"></div>
+        </div>
+        <h5 class="notes col-md-6">
+          <h4>Eris, Illusion Sect Leader
+          </h4>
+          “Eris is the more “colorful” illusionist in the Protection Flight. While the Elder that she answers to works
+          with enough subtlety to ease the mind from conspiracy, this Nimbat achieves the same by veering in the polar
+          opposite direction; her illusions are fantastical and her secret-keeping methods are too extravagant to imply
+          that she could be up to something inherently malicious. Even in our interview, she was conjuring an entire
+          change of scenery to give off the impression of a coffee shop, with stained cherry wood tables and the smell
+          of a fresh brew, even though we were moments ago standing on Colony grounds. I do not think she was excited
+          when I politely asked her to bring our atmosphere more down to earth.”
+        </h5>
+        <div class="col-md-8 offset-md-2">
+          <hr>
+        </div>
+      </div>
+      <div class="row">
+        <h5 class="notes col-md-7 offset-md-2">
+          <h4>Soteria, Defense Sect Leader
+          </h4>
+          “A great deal of Nimbats do not bother with articles of clothing. Fashion is treated with a bit more
+          utilitarian purpose— that is to say that one’s looks often articulate something or fulfill a task rather than
+          appease a conventional mode of aesthetic and public appearance. Soteria’s lavender cloak is one of the most
+          blunt examples. The desire to look mysterious and powerful is offhanded by the desire to simply keep his body
+          hidden, for his journey of magical empowerment and potentially heretical salves and techniques has left
+          superficial disfigurements that he would personally rather not unveil to “guests.” This Nimbat is indicative
+          of some of the more presentable examples of how terrifying magic can be in the Colony’s most defense-oriented
+          figureheads. For most of our interview, he talked at length about how he wants to inspire growth in his
+          underlings at Defense.”
+        </h5>
+        <div class="col-md-1">
+          <div style="text-align:center"><img style="width: 100%; height: auto;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/soteria.png"></div>
+        </div>
+        <div class="col-md-8 offset-md-2">
+          <hr>
+        </div>
+      </div>
+      <div class="row pb-1">
+        <div class="col-md-2 offset-md-2">
+          <div style="text-align:center"><img style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+              src="assets/sketches/marshall.png"></div>
+        </div>
+        <h5 class="notes col-md-6">
+          <h4>Marshall, Security Sect Leader
+          </h4>
+          "Marshall is a tall, battle-scarred Nimbat. So tall, in fact, that I honestly mistook her as a Visitant at
+          first. I got to speak at length with her, and she honestly amazed me with her insight on many topics that I
+          felt she would have no idea about. She gave me details on Colony Incident Response Procedures, but asked me
+          not to record anything on paper, for obvious reasons. While her wings are tattered, she’s still able to fly
+          about, albeit slower than smaller and lighter members of her Flight."
+        </h5>
+      </div>
     </mat-card-content>
   </mat-card>
 </div>
