--- a/src/app/colony-chronicles/choose-your-path/choose-your-path.component.html
+++ b/src/app/colony-chronicles/choose-your-path/choose-your-path.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <mat-card>
-        <mat-card-title>
-            <h3>Choose Your Path</h3>
+        <mat-card-title><div class="row">
+            <h3 class="col-md-8 offset-md-2">Choose Your Path</h3></div>
         </mat-card-title>
         <mat-card-subtitle>Published on 10/8/22, written by Finn. (2051 words, ~10 minute read.)</mat-card-subtitle>
         <mat-card-content style="text-align:justify;text-indent: 5%;" class="container">
