--- a/src/app/colony-chronicles/year-round/year-round.component.html
+++ b/src/app/colony-chronicles/year-round/year-round.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <mat-card>
-        <mat-card-title>
-            <h3>Year Round</h3>
+        <mat-card-title><div class="row">
+            <h3 class="col-md-8 offset-md-2">Year Round</h3></div>
         </mat-card-title>
         <mat-card-subtitle>Published on 1/18/22, written by Frequency. (3204 words, ~14 minute read.)</mat-card-subtitle>
         <mat-card-content style="text-align:justify;text-indent: 5%;" class="container">
