--- a/src/app/life-in-the-colony/life-in-the-colony.component.html
+++ b/src/app/life-in-the-colony/life-in-the-colony.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <mat-card>
-        <mat-card-title>
-            <h3>Life in the Colony</h3>
+        <mat-card-title><div class="row">
+            <h3 class="col-md-8 offset-md-2">Life in the Colony</h3></div>
         </mat-card-title>
         <mat-card-content>
             <hr>
