--- a/src/app/taxonomy/taxonomy.component.html
+++ b/src/app/taxonomy/taxonomy.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
     <mat-card>
         <mat-card-title>
-            <h3>Nimbat Taxonomy</h3>
+            <div class="row">
+                <h3 class="col-md-8 offset-md-2">Nimbat Taxonomy</h3></div>
         </mat-card-title>
         <mat-card-content>
             <div class="row">
